# ucsak-app

./: .cursorrules  .flaskenv  .gitignore  NOTICE  README.md  app.yaml  build.py  databricks.yaml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh  tailwind.config.js  vite.config.ts
api/: __init__.py  app.py  app.yaml  data_contracts.py  requirements.txt  workflow_manager.py
api/common/: __init__.py  config.py  database.py  deps.py  errors.py  git.py  init.py  job_runner.py  logging.py  middleware.py  notifications.py  repository.py  search.py  search_interfaces.py  workspace_client.py
api/controller/: business_glossaries_manager.py  business_glossary_manager.py  catalog_commander_manager.py  compliance_manager.py  data_asset_reviews_manager.py  data_contract_manager.py  data_contracts_manager.py  data_product_manager.py  data_products_manager.py  entitlements_manager.py  entitlements_sync_manager.py  estate_manager.py  master_data_management_manager.py  metadata_manager.py  notification_manager.py  notifications_manager.py  search_manager.py  security_features_manager.py  settings_manager.py
api/data/: business_glossaries.yaml  business_glossary.yaml  compliance.yaml  data_asset_reviews.yaml  data_contracts.yaml  data_products.yaml  entitlements.yaml  entitlements_sync.yaml  estates.yaml  master_data_management.yaml  notifications.yaml
api/db_models/: __init__.py  data_asset_reviews.py  data_products.py
api/models/: business_glossary.py  catalog_commander.py  compliance.py  data_asset_reviews.py  data_contract.py  data_contracts.py  data_product.py  data_products.py  entitlements.py  estate.py  master_data_management.py  metadata.py  notification.py  settings.py  user.py
api/repositories/: data_asset_reviews_repository.py  data_products_repository.py
api/routes/: business_glossary_routes.py  catalog_commander_routes.py  catalog_routes.py  compliance_routes.py  data_asset_reviews_routes.py  data_contract_routes.py  data_product_routes.py  data_products.py  entitlements_routes.py  entitlements_sync_routes.py  estate_manager_routes.py  glossary_routes.py  jobs_routes.py  master_data_management_routes.py  metadata_routes.py  notifications_routes.py  search_routes.py  security_features_routes.py  security_routes.py  settings_routes.py  user_routes.py  workflow_routes.py
api/static/: asset-manifest.json  index.html
api/utils/: config.py  helper.py
api/workflows/: copy_table.yaml
public/: index.html
src/: App.tsx  app.tsx  index.css
src/components/: Button.tsx  Layout.tsx  (+11 more)
static/: index-BjDxJJkZ.css  index-BzfsUW29.css  index-D8LqfoXl.js  index-D9B7DOPV.js  index-DJjxqbl9.js  index-DPxqrTVi.css  index-DzpABGq8.js  index-Fo2Z1Sof.js  index-TR-X-4xU.css  index-ZsHciF8d.js  index.html  manifest.json  vendor-BbMx8q9L.js  vendor-BbMx8q9L.js.map  vendor-ZIJ_X5tk.js  vendor-ZIJ_X5tk.js.map
(+81 files in other folders)
